k8s/overlays/test/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-k8s-demo
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 250m
              memory: 192Mi
