k8s/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-k8s-demo
spec:
  rules:
    - host: test.devops-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-k8s-demo
                port:
                  name: http
