k8s/overlays/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-demo-test
  labels:
    app.kubernetes.io/name: devops-k8s-demo
    app.kubernetes.io/environment: test
